--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ a {
     top: 69px;
     gap: 0;
     flex-direction: column;
-    background-color: #ffcf00;
+    background-color: #d3a74d;
     width: 100%;
     text-align: center;
     transition: 0.3s;
