--- a/style.css
+++ b/style.css
@@ -737,3 +737,14 @@ Main components
 .reveal.active{
   opacity: 1;
 }
+
+
+
+
+/*
+
+viel zu anstrengend man hab so viel random stuff probiert.
+
+einfach html und css verlernt :/
+
+*/
