--- a/style.css
+++ b/style.css
@@ -729,6 +729,6 @@ Main components
 
 viel zu anstrengend man hab so viel random stuff probiert.
 
-einfach html und css verlernt :/
+einfach html und css verlernt :/ f
 
 */
