--- a/style.css
+++ b/style.css
@@ -277,8 +277,8 @@ launch-time div{
 }
 .launch-time div p{
   font-size: 45px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 8px;
+  margin-right: 8px;
   align-items: center;
   text-align: center;
 }
@@ -729,6 +729,6 @@ Main components
 
 viel zu anstrengend man hab so viel random stuff probiert.
 
-einfach html und css verlernt :/ f
+einfach html und css verlernt :/
 
 */
