--- a/style.css
+++ b/style.css
@@ -442,9 +442,19 @@ textarea{
     margin-bottom: -100px;
     margin-top: -70px;
   }
-
   #c {
     font-size: 9pt;
+  }
+  .lalalala {
+    margin-top: 100px;
+  }
+  #c2 {
+    font-size: 9pt;
+  }
+  #c3 {
+    font-size: 9pt;
+    margin-top: 5px;
+    margin-bottom: 30px;
   }
 
   #image {
